## Reinforce Utils Class
## Refactoring Library

## Create New Directive 'Ripple'
 - this will be ripple effect to element

--- a/src/app/mommoo-library/ui/banner/banner.component.scss
+++ b/src/app/mommoo-library/ui/banner/banner.component.scss
@@ -2,6 +2,9 @@
   display : flex;
   flex-direction: column;
   justify-items: center;
+  // IE10 is not exist 'justify-items' property so,
+  // write 'text-align' property to align title and subtitle to center
+  text-align: center;
 }
 
 :host(#banner-title) {
