--- a/src/app/mommoo-library/ui/card/card.component.scss
+++ b/src/app/mommoo-library/ui/card/card.component.scss
@@ -1,30 +1,21 @@
 @import '../common/style/common-style';
 :host {
   display : inline-block;
-  position : relative;
   visibility: hidden;
 }
 
-#shadow-visible-rect {
-  padding : 3px 3px 5px 3px;
-  position : absolute;
-  width : 100%;
-  height : 100%;
-  box-sizing: border-box;
-}
-
 #flex-card-box {
-  @include box-shadow;
-  border-radius : 5px;
   @include flex-column-center;
   width : 100%;
   height : 100%;
   box-sizing: border-box;
   padding-top: 10px;
   overflow: hidden;
+  align-items: stretch; //fix for IE10 flex item text node overflow issue
 
   #card-title-box {
     word-break : break-word;
+    word-wrap: break-word; // for IE
     align-self : start;
     padding : 6px 16px;
     font-size : 20px;
