--- a/src/app/mommoo-library/ui/common/shadow-box/shadow-box.component.scss
+++ b/src/app/mommoo-library/ui/common/shadow-box/shadow-box.component.scss
@@ -1,18 +1,20 @@
-@import '../../style/common-style';
+@import '../style/common-style';
 
 :host {
   width : 100%;
   height : 100%;
   display: block;
-  position : relative;
   padding : 3px 3px 5px 3px;
   box-sizing: border-box;
 }
 
-#shadow-visible-rect {
+.shadow-visible-rect {
   width : 100%;
   height : 100%;
-  display : flex;
-  flex-direction: column;
   @include box-shadow;
+}
+
+.flat-visible-rect {
+  width : 100%;
+  height : 100%;
 }
