--- a/src/app/mommoo-library/ui/button/button.component.html
+++ b/src/app/mommoo-library/ui/button/button.component.html
@@ -1,5 +1,7 @@
-<mommoo-shadow-box>
-  <div mommooRipple id="flex-wrapper">
+<mommoo-shadow-box [flat]="flat">
+  <div mommooRipple
+       (rippleDone)="onRippleClick($event)"
+       id="flex-wrapper">
     <img *ngIf="imgPath" [src]="imgPath" [style.width]="getImageSize()" [style.height]="getImageSize()" />
     <div [style.paddingLeft]="'10px'" [style.fontSize]="size">
       <ng-content></ng-content>
