--- a/src/app/mommoo-library/ui/common/shadow-box/shadow-box.component.html
+++ b/src/app/mommoo-library/ui/common/shadow-box/shadow-box.component.html
@@ -1,4 +1,4 @@
-<div [ngClass]="targetClassName">
+<div [ngClass]="targetClassName" [style.borderRadius]="borderRadius">
   <ng-content></ng-content>
 </div>
 
