--- a/src/app/mommoo-library/ui/grid-list/grid-list.component.scss
+++ b/src/app/mommoo-library/ui/grid-list/grid-list.component.scss
@@ -1,8 +1,8 @@
 :host {
-  display:block;
-  overflow:hidden;
+  display: block;
+  padding: 16px;
 
-  #shadow-box {
+  #relative-box {
     position : relative;
   }
 }
