--- a/src/app/mommoo-library/ui/grid-list/grid-tile/grid-tile.component.scss
+++ b/src/app/mommoo-library/ui/grid-list/grid-tile/grid-tile.component.scss
@@ -1,10 +1,6 @@
 :host {
+  display:block;
+  width:100%;
+  height:100%;
   position : absolute;
-}
-
-#area-decider {
-  width: 100%;
-  height : 100%;
-  position : absolute;
-  overflow : hidden;
 }
