--- a/src/mommoo-library/ui/grid-list/grid-tile/grid-tile.component.html
+++ b/src/mommoo-library/ui/grid-list/grid-tile/grid-tile.component.html
@@ -1,1 +1,4 @@
-<ng-content></ng-content>
+<div style="position:absolute; left:0 ; right:0; top:0; bottom:0">
+  <ng-content></ng-content>
+</div>
+
