## GirdList Component Performance Upgrade
## Fix GridList Parent Style Changing Bug

--- a/src/mommoo-library/ui/grid-list/grid-list.component.html
+++ b/src/mommoo-library/ui/grid-list/grid-list.component.html
@@ -1,3 +1,5 @@
-<div id="relative-box">
-  <ng-content></ng-content>
+<div #viewport>
+  <div id="relative-box">
+    <ng-content></ng-content>
+  </div>
 </div>
