## Refactoring App Application
## Re Build Package Tree Structure
 - redesign package name, path and create new package for need
 - renaming component ( by separating 'page', 'section')

## Create New Component 'Detail-Project'

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,3 +29,24 @@
 <div id="footer-area" #footerArea>
   <view-footer></view-footer>
 </div>
+<!--<mommoo-card [cardWidth]="'fit'" [cardHeight]="'700px'">-->
+  <!--<mommoo-card-viewport>-->
+    <!--<mommoo-card-title>Mommoo! Mommoo!Mommoo!Mommoo!Mommoo!Mommoo!Mommoo!Mommoo!Mommoo!Mommoo!Mommoo!Mommoo!Mommoo!Mommoo!Mommoo!Mommoo!</mommoo-card-title>-->
+    <!--<mommoo-card-image [imagePath]="'../assets/images/portfolio/myportfolio.png'"></mommoo-card-image>-->
+    <!--<mommoo-card-contents>동해물과 백두산이 마르고 닯도록 대한사람 대한으로 우리 문화 만새 무우궁화 사암천리 화려 가아아앙아앙ㅅ산 대한사람 대한으로 우리 나라만세!!</mommoo-card-contents>-->
+    <!--<mommoo-card-hashtag>-->
+      <!--<mommoo-card-hashtag-contents>Mommoo</mommoo-card-hashtag-contents>-->
+      <!--<mommoo-card-hashtag-contents>Good</mommoo-card-hashtag-contents>-->
+      <!--<mommoo-card-hashtag-contents>Hamzzi</mommoo-card-hashtag-contents>-->
+      <!--<mommoo-card-hashtag-contents>Mommoo</mommoo-card-hashtag-contents>-->
+      <!--<mommoo-card-hashtag-contents>Good</mommoo-card-hashtag-contents>-->
+      <!--<mommoo-card-hashtag-contents>Hamzzi</mommoo-card-hashtag-contents>-->
+      <!--<mommoo-card-hashtag-contents>Mommoo</mommoo-card-hashtag-contents>-->
+      <!--<mommoo-card-hashtag-contents>Good</mommoo-card-hashtag-contents>-->
+      <!--<mommoo-card-hashtag-contents>Hamzzi</mommoo-card-hashtag-contents>-->
+      <!--<mommoo-card-hashtag-contents>Mommoo</mommoo-card-hashtag-contents>-->
+      <!--<mommoo-card-hashtag-contents>Good</mommoo-card-hashtag-contents>-->
+      <!--<mommoo-card-hashtag-contents>Hamzzi</mommoo-card-hashtag-contents>-->
+    <!--</mommoo-card-hashtag>-->
+  <!--</mommoo-card-viewport>-->
+<!--</mommoo-card>-->
