--- a/src/app/common.scss
+++ b/src/app/common.scss
@@ -1,3 +1,4 @@
+//Font
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR|Nanum+Gothic|Teko:400,500,600,700|Exo+2:500');
 
 @mixin TekoFont {
@@ -15,6 +16,10 @@
 @mixin Exo2Font {
   font-family: 'Exo 2', cursive;
 }
+
+//MediaQuery
+
+$headerWidthInDesktopMediaQuery: 300px;
 
 @mixin desktop-media-query {
   @media all and (min-width : 1025px) {
