--- a/src/app/view/contents/page/home/section/about/about.component.scss
+++ b/src/app/view/contents/page/home/section/about/about.component.scss
@@ -1,3 +1,7 @@
-.card-content {
+@import '../../../../../../common';
+
+#card-title {
+  @include NanumGhothicFont;
+  font-weight:900;
   text-align : center;
 }
