--- a/src/app/view/header/menu-button/menu-button.component.html
+++ b/src/app/view/header/menu-button/menu-button.component.html
@@ -1,5 +1,4 @@
-<div id="menuButton"
-     (click)="buttonAnimate()">
+<div id="menuButton" (click)="buttonAnimate()">
   <div id="menu-top"    #menuTop></div>
   <div id="menu-middle" #menuMiddle></div>
   <div id="menu-bottom" #menuBottom></div>
