--- a/src/app/view/header/menu-list/menu-list.component.scss
+++ b/src/app/view/header/menu-list/menu-list.component.scss
@@ -1,13 +1,14 @@
-@import '../../../../common';
+@import '../../../common';
 
 :host {
   width : 100%;
-  display : flex;
+  display : block;
+  overflow : hidden;
 }
+
 nav {
   width : 100%;
   box-sizing: border-box;
-  overflow : hidden;
   padding : 10px 0;
 
   ul {
