--- a/src/app/view/header/header.component.scss
+++ b/src/app/view/header/header.component.scss
@@ -11,48 +11,75 @@
   width : 100%;
   height : 100%;
   color : black;
-  display : flex;
-  flex-direction: column;
-  align-items: center;
+  display: block;
+  text-align: center;
+  box-sizing: border-box;
 
-  #flex-column-line {
-    width : 100%;
-    padding : 0 1.5rem;
+  #media-query-layout {
+    width: 100%;
+    padding: 0 1.5rem;
     box-sizing: border-box;
-    display : flex;
+    display: flex;
     align-items: center;
-    justify-content: space-between;
+  }
+
+  #view-menu-list {
+    box-sizing: border-box;
   }
 
   #title {
     @include TekoFont;
-    padding : 1rem 0;
     font-size   : 1.5rem;
     font-weight : bold;
     box-sizing : border-box;
     text-align : center;
   }
+
+  #back-button{
+    margin:auto;
+    padding:5px;
+    width:35px;
+    height:35px;
+    background-color: white;
+    border-radius: 50%;
+    cursor: pointer;
+
+    img {
+      width: 35px;
+      height: 35px;
+    }
+  }
 }
 
 @include desktop-media-query {
   #header {
-    #title {
-      padding : 4rem 0;
-      white-space: pre-line;
-    }
+    padding: 3rem 2rem;
   }
 
-  #flex-column-line {
-    flex-direction: column;
+  #title {
+    padding-top:3rem;
+    white-space: pre-line;
+  }
+
+  #media-query-layout {
+    justify-content: center;
   }
 
   #menu-button {
     display : none;
   }
+
+  #back-button {
+    margin-top: 3rem;
+  }
 }
 
 @include tablet-and-mobile-media-query {
-  #flex-column-line {
-    flex-direction: row;
+  #header {
+    padding: 1rem;
+  }
+
+  #media-query-layout {
+    justify-content: space-between;
   }
 }
