--- a/frontend-angular/src/mommoo-library/ui/chip-view/chip-view.component.html
+++ b/frontend-angular/src/mommoo-library/ui/chip-view/chip-view.component.html
@@ -1,2 +1,4 @@
 <div id="icon" *ngIf="icon" [style.background-image]="iconURL"></div>
-<ng-content></ng-content>
+<div id="content-wrapper">
+  <ng-content></ng-content>
+</div>
