--- a/frontend-angular/src/mommoo-library/ui/chip-view/chip-view.component.scss
+++ b/frontend-angular/src/mommoo-library/ui/chip-view/chip-view.component.scss
@@ -1,23 +1,29 @@
-$chipViewHeight: 30px;
-$chipViewImgSize: 20px;
+$chipViewHeight: 40px;
+$chipViewImgSize: 30px;
 
 :host {
   display: inline-flex;
-  padding: 2px 10px;
   height: $chipViewHeight;
   border-radius: 16px;
-  background-color: #c8c8c8;
+  background-color: #e6e6e6;
   justify-content: center;
   align-items: center;
-  font-weight:900;
+  font-weight:700;
   font-size: 14px;
 }
 
 #icon {
-  border-radius: 50%;
-  background-size: contain;
-  background-repeat: no-repeat;
   width: $chipViewImgSize;
   height: $chipViewImgSize;
-  padding-right: 5px;
+  border-radius: 50%;
+  margin : 2.5px 0 2.5px 5px;
+  box-sizing: border-box;
+  background-color: #f1f1f1;
+  background-position: center center;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+#content-wrapper {
+  padding: 10px 10px 10px 10px;
 }
