--- a/frontend-angular/src/mommoo-library/ui/common/style/common-style.scss
+++ b/frontend-angular/src/mommoo-library/ui/common/style/common-style.scss
@@ -15,3 +15,6 @@
     box-shadow: 0 6px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
   }
 }
+
+$primaryTextColor: rgba(0, 0, 0, .87);
+$secondaryTextColor: rgba(0, 0, 0, .6);
