## Build Front-End Main Package  - build MainCommonAnimator class  - refactoring MainComponentLayoutDetector : append new api, renaming  - write TypeScript Doc where need to be written

--- a/frontend-angular/src/app/component/main/main.component.html
+++ b/frontend-angular/src/app/component/main/main.component.html
@@ -21,11 +21,11 @@
     <view-header></view-header>
   </div>
   <!-- Fixed 구조 때문에 요소의 모양을 유지 할 수 없다. 블록 구조를 취하기 위해, block 구조를 살린 view-header 위치 -->
-  <view-header></view-header>
+  <view-header #fakeHeader></view-header>
 </div>
 <div id="contents-area" #contentsArea>
     <router-outlet></router-outlet>
 </div>
-<div id="footer-area" #footerArea>
+<div #footerArea>
   <view-footer></view-footer>
 </div>
