## Refactoring MenuButton Package In Header Package

--- a/frontend-angular/src/app/component/main/header/menu-button/menu-button.component.html
+++ b/frontend-angular/src/app/component/main/header/menu-button/menu-button.component.html
@@ -1,5 +1,3 @@
-<div id="menuButton" (click)="toggleButtonEvent()">
-  <div id="menu-top"    #menuTop></div>
-  <div id="menu-middle" #menuMiddle></div>
-  <div id="menu-bottom" #menuBottom></div>
-</div>
+<div class="menu-line"    #menuTop></div>
+<div class="menu-line" #menuMiddle></div>
+<div class="menu-line" #menuBottom></div>
