--- a/frontend-angular/src/app/component/main/header/menu-button/menu-button.component.scss
+++ b/frontend-angular/src/app/component/main/header/menu-button/menu-button.component.scss
@@ -1,31 +1,10 @@
-$margin : 6px;
-$menuBarH : 4px;
-$menuBarW : 30px;
-
-#menuButton {
+:host {
   position : relative;
-  width : $menuBarW;
-  height : $menuBarH * 3 + $margin *2;
   cursor : pointer;
   -webkit-tap-highlight-color: transparent;
 }
 
-.common {
-  width  : $menuBarW;
-  height : $menuBarH;
+.menu-line {
   background-color: black;
   position : absolute;
-}
-#menu-top {
-  @extend .common;
-}
-
-#menu-middle {
-  @extend .common;
-  top : $margin + $menuBarH;
-}
-
-#menu-bottom {
-  @extend .common;
-  top : ($margin + $menuBarH) * 2;
 }
