## Refactoring MenuLine Package In Header Package

--- a/frontend-angular/src/app/component/main/header/menu-list/menu-list.component.html
+++ b/frontend-angular/src/app/component/main/header/menu-list/menu-list.component.html
@@ -1,11 +1,9 @@
-<nav>
-  <ul>
-    <ng-container *ngFor="let menuItemName of menuItemNames;">
-      <li>
-        <div mommooRipple (click)="menuItemClickEvent(menuItemName)" class="li-text-contents">
-          {{menuItemName | uppercase}}
-        </div>
-      </li>
-    </ng-container>
-  </ul>
-</nav>
+<ul>
+  <ng-container *ngFor="let menuItemName of menuNames;">
+    <li>
+      <div mommooRipple (click)="menuItemClickEvent(menuItemName)" class="li-text-contents">
+        {{menuItemName | uppercase}}
+      </div>
+    </li>
+  </ng-container>
+</ul>
