--- a/frontend-angular/src/app/component/main/header/menu-list/menu-list.component.scss
+++ b/frontend-angular/src/app/component/main/header/menu-list/menu-list.component.scss
@@ -1,47 +1,44 @@
-@import '../../../../../styles';
+@import '~src/styles';
 
 :host {
   width : 100%;
   display : block;
   overflow : hidden;
-}
-
-nav {
-  width : 100%;
   box-sizing: border-box;
   padding : 10px 0;
+}
 
-  ul {
-    padding:0;
-    margin:0;
+ul {
+  padding:0;
+  margin:0;
+}
+
+li {
+  @include Exo2Font;
+  display : block;
+  position : relative;
+  font-size : 0.8rem;
+  cursor : pointer;
+  -webkit-tap-highlight-color: transparent;
+
+  &:hover{
+    font-size : 0.9rem;
+    font-weight : 600;
+    color : #e91e63;
   }
 
-  li {
-    @include Exo2Font;
-    display : block;
-    position : relative;
-    font-size : 0.8rem;
-    cursor : pointer;
-    -webkit-tap-highlight-color: transparent;
+  &:first-child {
+    margin-top:0;
+  }
 
-    &:hover{
-      font-size : 0.9rem;
-      font-weight : 600;
-      color : #e91e63;
-    }
+  &:nth-child(n) {
+    margin-top: 0.5rem;
+  }
 
-    &:first-child {
-      margin-top:0;
-    }
-
-    &:nth-child(n) {
-      margin-top: 0.5rem;
-    }
-
-    .li-text-contents {
-      width: 100%;
-      text-align : center;
-      padding : 10px 0;
-    }
+  .li-text-contents {
+    @include NotoSansKRFont;
+    width: 100%;
+    text-align : center;
+    padding : 10px 0;
   }
 }
