## Refactoring Header Package

--- a/frontend-angular/src/app/component/main/header/header.component.html
+++ b/frontend-angular/src/app/component/main/header/header.component.html
@@ -1,22 +1,20 @@
-<header id="header">
-  <div id="media-query-layout">
-    <div id="title">{{headerTitle | uppercase}}</div>
+<div id="header-guide">
+  <div id="title">{{title}}</div>
 
-    <view-menu-button id="menu-button"
-                     (menuButtonEvent)="afterMenuButtonClickEvent($event)"></view-menu-button>
+  <header-menu-button id="menu-button"
+                    (menuButtonEvent)="afterMenuButtonClickEvent($event)"></header-menu-button>
+</div>
+
+<collapsible-box>
+  <view-menu-list
+    [menuNames]="menuNames"
+    (menuListItemClick)="afterMenuListItemClickEvent($event)"></view-menu-list>
+
+  <div *ngIf="isBackButtonVisible"
+       mommooRipple
+       [rippleRadius]="'50%'"
+       (click)="afterBackButtonClickEvent()"
+       id="back-button">
+    <img [src]="backButtonImagePath" alt="back-button"/>
   </div>
-
-  <animation-box>
-    <div id="animation-box-viewport">
-      <view-menu-list (menuListItemClick)="afterMenuListItemClickEvent()"></view-menu-list>
-
-      <div *ngIf="isBackButtonVisible"
-           mommooRipple
-           [rippleRadius]="'50%'"
-           (click)="afterBackButtonClickEvent()"
-           id="back-button">
-        <img src="../../../../assets/images/arrow_back.svg"/>
-      </div>
-    </div>
-  </animation-box>
-</header>
+</collapsible-box>
