--- a/frontend-angular/src/app/component/main/footer/footer.component.scss
+++ b/frontend-angular/src/app/component/main/footer/footer.component.scss
@@ -1,8 +1,47 @@
+@import '~src/styles';
+
 :host {
-  display : block;
-  background-color : rgba(204, 204, 204, 0.04);
-  padding : 1.2rem 0;
+  display: block;
   font-size : 0.8rem;
   text-align : center;
+  @include NotoSansKRFont;
+}
+
+$contentsGutter: 8px;
+$padding: 16px;
+
+#contents-wrapper {
+  padding: $padding;
+  width: 100%;
+  background-color : rgba(204, 204, 204, 0.3);
+  box-sizing: border-box;
+}
+
+#suffix {
+  padding: $padding;
+  width: 100%;
+  height: 100%;
+  background-color : rgba(204, 204, 204, 0.5);
+  box-sizing: border-box;
+}
+
+.contents {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  color: $primaryTextColor;
+  margin-bottom: $contentsGutter;
+  cursor: pointer;
+
+  img {
+    $imageSize: 20px;
+    width: $imageSize;
+    height: $imageSize;
+    margin-right: 10px;
+  }
+
+  &:nth-last-child(1) {
+    margin-bottom: 0;
+  }
 }
 
