--- a/frontend-angular/src/app/component/main/header/header.component.scss
+++ b/frontend-angular/src/app/component/main/header/header.component.scss
@@ -24,7 +24,7 @@
 }
 
 #title {
-  @include TekoFont;
+  @include NotoSansKRFont;
   font-size   : 1.5rem;
   font-weight : bold;
   box-sizing : border-box;
@@ -32,6 +32,7 @@
 }
 
 #back-button{
+  margin-top: 16px;
   margin-left: auto;
   margin-right:auto;
   padding:5px;
