## Build FooterComponent  - change copyright text
## Build HeaderComponent
 - change hambuger menu animation
 - change hambuger menu style
 - change header font

## Refactoring Font Style
 - using body inheritance for performance

--- a/frontend-angular/src/app/component/main/footer/footer.component.html
+++ b/frontend-angular/src/app/component/main/footer/footer.component.html
@@ -7,6 +7,7 @@
     </ng-container>
   </div>
 </div>
-<div id="suffix">
-  Copyright© Mommoo 2018
+<div id="copyright">
+  <div>Copyright © {{copyrightYear}}</div>
+  <div>Mommoo All Rights Reserved</div>
 </div>
