--- a/frontend-angular/src/app/component/main/footer/footer.component.scss
+++ b/frontend-angular/src/app/component/main/footer/footer.component.scss
@@ -4,7 +4,6 @@
   display: block;
   font-size : 0.8rem;
   text-align : center;
-  @include NotoSansKRFont;
 }
 
 $contentsGutter: 8px;
@@ -17,7 +16,7 @@ $padding: 16px;
   box-sizing: border-box;
 }
 
-#suffix {
+#copyright {
   padding: $padding;
   width: 100%;
   height: 100%;
