--- a/frontend-angular/src/app/component/main/contents/basic-contents/banner/banner.component.scss
+++ b/frontend-angular/src/app/component/main/contents/basic-contents/banner/banner.component.scss
@@ -7,11 +7,10 @@
 }
 
 #banner-title {
-  @include TekoFont;
+  @include Dosis;
   font-weight:900;
 }
 
 .banner-text-contents {
-  @include NanumGhothicFont;
   font-weight: 300;
 }
