--- a/frontend-angular/src/app/component/main/contents/basic-contents/basic-contents.component.scss
+++ b/frontend-angular/src/app/component/main/contents/basic-contents/basic-contents.component.scss
@@ -1,4 +1,4 @@
-@import '~src/mommoo-library/handler/window/size/window-size-handler';
+@import '../../../../../mommoo-library/handler/window/size/window-size-handler';
 
 :host {
   display: block;
