--- a/frontend-angular/src/app/component/main/contents/basic-contents/welcome/welcome.component.html
+++ b/frontend-angular/src/app/component/main/contents/basic-contents/welcome/welcome.component.html
@@ -3,7 +3,7 @@
   <p>혹시 간편하게 정리된 PDF 포트폴리오를 보고 싶으신가요?</p>
   <mommoo-button>
     <div id="flex-row-box">
-      <img *ngIf="isImagePathLoaded()" draggable="false" [src]="properties.pdf"/>
+      <img draggable="false" [src]="PDFImagePath" alt="PDF 로고"/>
       PDF로 보기
     </div>
   </mommoo-button>
