--- a/frontend-angular/src/app/component/main/contents/basic-contents/welcome/welcome.component.scss
+++ b/frontend-angular/src/app/component/main/contents/basic-contents/welcome/welcome.component.scss
@@ -1,3 +1,5 @@
+@import '~src/styles';
+
 #pdf-guide {
   display:flex;
   flex-direction: column;
@@ -10,9 +12,7 @@
     padding: 0 10px;
     box-sizing: border-box;
     max-width:100%;
-    word-break: break-word;
-    -ms-word-break: break-all;
-    -ms-word-wrap: break-word;
+    @include break-word;
   }
 }
 
